--- a/cursos.html
+++ b/cursos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Torneos</title>
+    <title>Cursos</title>
     <link rel="shortcut icon" href="/img/mclogo16x16.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -40,7 +40,7 @@
     </nav>
     <!-- tittle banner-->
     <section class="bg-dark bg-gradient text-light text-center p-3">
-        <h1 class="tittle">Torneos</h1>
+        <h1 class="tittle">Cursos</h1>
     </section>
     <!-- torneos main -->
     <div class="row p-3">
