--- a/torneos.html
+++ b/torneos.html
@@ -29,32 +29,38 @@
         <h2 class="tittle">Torneos</h2>
         <section class="torneo_section">
             <div class="torneo_box">
-                <h2>Torneo Blitz</h2>
-                <h3>3+2</h3>
-                <p>15/03/2022</p>
-                <p>Inscripción</p>
-                <h3>$700</h3>
-                <a href="contactanos.html" class="torneo_a">Suscribite</a>
+                <div class="torneo_img_container">
+                    <img src="img/t1.jpg" alt="chess table">
+                </div>
+                <div class="torneos_detalles">
+                    <h3>Torneo Blitz</h3>
+                    <p>Tres minutos con adición de tres segundos, valor de Inscripción $500</p>
+                    <a href="contactanos.html" class="torneo_a">Suscribite</a>
+                </div>
             </div>
             <div class="torneo_box">
-                <h2>Torneo Rapid</h2>
-                <h3>10+0</h3>
-                <p>18/03/2022</p>
-                <p>Inscripción</p>
-                <h3>$500</h3>
-                <a href="contactanos.html" class="torneo_a">Suscribite</a>
+                <div class="torneo_img_container">
+                    <img src="img/t2.jpg" alt="chess table">
+                </div>
+                <div class="torneos_detalles">
+                    <h3>Torneo Rapid</h3>
+                    <p>Diez minutos sin adición, valor de Inscripción $700</p>
+                    <a href="contactanos.html" class="torneo_a">Suscribite</a>
+                </div>
             </div>
             <div class="torneo_box">
-                <h2>Torneo Classic</h2>
-                <h3>90+30</h3>
-                <p>21/03/2022</p>
-                <p>Inscripción</p>
-                <h3>$1000</h3>
-                <a href="contactanos.html" class="torneo_a">Suscribite</a>
+                <div class="torneo_img_container">
+                    <img src="img/t3.jpg" alt="chess table">
+                </div>
+                <div class="torneos_detalles">
+                    <h3>Torneo Classical</h3>
+                    <p>Media hora sin adición, valor de Inscripción $1000</p>
+                    <a href="contactanos.html" class="torneo_a">Suscribite</a>
+                </div>
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer_torneos">
         <div class="footer_redes">
             <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
             <a href="https://www.facebook.com" target="blank_"><img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook"></a>
