--- a/cursos.html
+++ b/cursos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos</title>
-    <link rel="shortcut icon" href="/img/mclogo16x16.png">
+    <link rel="shortcut icon" href="img/mclogo16x16.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -13,7 +13,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg bg-dark bg-gradient navbar-dark">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
+            <a href="index.html" class="navbar-brand"><img src="img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,7 +51,7 @@
                 <p class="card-text p-3 text-light">Aprende a llevar tus conceptos básicos al siguiente nivel en aperturas, medios juegos, tácticas, estrategia y finales. Si estás listo para desarrollar los fundamentos del ajedrez para principiantes, este curso es para vos. Diseñé este curso para jugadores con una calificación de aproximadamente entre 800 y 1600. Inscribite ahora y preparate para disparar tus habilidades.</p>
                 </div>
             </div>
-            <img src="/img/kingbc.png" class="img-fluid rounded mx-auto d-block p-2" alt="pieza rey">
+            <img src="img/kingbc.png" class="img-fluid rounded mx-auto d-block p-2" alt="pieza rey">
         </div>
         <div class="col-md p-2">
             <div class="card text-center">
@@ -60,11 +60,11 @@
                 <h3 class="card-title p-3 text-warning">Bootcamp Principiante</h3>
                 <p class="card-text p-3 text-light">Aprende los fundamentos del ajedrez que te permitirán aplastar a tus oponentes en poco tiempo. Si querés aprender a jugar al ajedrez, o tenés poca experiencia en el juego y estás luchando por mejorar, ¡este curso es para vos! Te brindará todos los fundamentos en las 3 etapas del juego: apertura, medio juego y final. Más importante aún, acelerará su proceso de aprendizaje al enseñarte cómo evitar errores comunes.</p>
                 </div>
-                <img src="/img/queenbc.png" class="img-fluid rounded mx-auto d-block p-2" alt="pieza reina">
+                <img src="img/queenbc.png" class="img-fluid rounded mx-auto d-block p-2" alt="pieza reina">
             </div>
         </div>
         <div class="container d-flex justify-content-center align-items-center p-4">
-            <a href="/contactanos.html" class="btn btn-dark bg-gradient text-warning inscribite_btn">¡Inscribite ahora y comenzá a ganar juegos hoy!</a>
+            <a href="contactanos.html" class="btn btn-dark bg-gradient text-warning inscribite_btn">¡Inscribite ahora y comenzá a ganar juegos hoy!</a>
         </div>
     </div>
     <!-- footer -->
