--- a/torneos.html
+++ b/torneos.html
@@ -13,7 +13,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg bg-dark bg-gradient navbar-dark">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="/img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
+            <a href="index.html" class="navbar-brand"><img src="img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -53,7 +53,7 @@
                     <div class="card-body bg-dark bg-gradient">
                     <h3 class="card-title p-3 text-light">Torneo Blitz</h3>
                     <p class="card-text p-3 text-light">Formato: 3+2. Valor de inscripción: $700.</p>
-                    <a href="/contactanos.html" class="btn btn-warning bg-gradient anotate_btn">Anotate</a>
+                    <a href="contactanos.html" class="btn btn-warning bg-gradient anotate_btn">Anotate</a>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     <div class="card-body bg-warning bg-gradient">
                     <h3 class="card-title p-3">Torneo Rapid</h3>
                     <p class="card-text p-3">Formato: 10+0. Valor de inscripción: $500.</p>
-                    <a href="/contactanos.html" class="btn btn-dark bg-gradient anotate_btn">Anotate</a>
+                    <a href="contactanos.html" class="btn btn-dark bg-gradient anotate_btn">Anotate</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                     <div class="card-body bg-dark bg-gradient">
                     <h3 class="card-title p-3 text-light">Torneo Classic</h3>
                     <p class="card-text p-3 text-light">Formato: 90+30. Valor de inscripción: $1000.</p>
-                    <a href="/contactanos.html" class="btn btn-warning bg-gradient anotate_btn">Anotate</a>
+                    <a href="contactanos.html" class="btn btn-warning bg-gradient anotate_btn">Anotate</a>
                     </div>
                 </div>
             </div>
