--- a/conocenos.html
+++ b/conocenos.html
@@ -1,72 +1,119 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conocenos</title>
-    <link rel="shortcut icon" href="img/mclogo16x16.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="shortcut icon" href="img/mclogo16x16.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg bg-dark bg-gradient navbar-dark">
-        <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="torneos.html" class="nav-link">Torneos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="cursos.html" class="nav-link">Cursos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="conocenos.html" class="nav-link">Conocenos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contactanos.html" class="nav-link">Contactanos</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <a href="index.html" class="navbar-brand"
+          ><img src="img/mclogo32x32.png" alt="masterchess logo" /> Masterchess
+          <span class="text-warning">Academy</span></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a href="torneos.html" class="nav-link">Torneos</a>
+            </li>
+            <li class="nav-item">
+              <a href="cursos.html" class="nav-link">Cursos</a>
+            </li>
+            <li class="nav-item">
+              <a href="conocenos.html" class="nav-link">Conocenos</a>
+            </li>
+            <li class="nav-item">
+              <a href="contactanos.html" class="nav-link">Contactanos</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
     <!-- tittle banner-->
     <section class="bg-dark bg-gradient text-light text-center p-3">
-        <h1 class="tittle">Conocenos</h1>
+      <h1 class="tittle">Conocenos</h1>
     </section>
     <!-- conocenos main -->
-    <div class="container-fluid bg-dark bg-gradient text-light text-center mt-3 rounded p-4">
-        <p><strong class="text-warning">¡Hola!</strong> Somos una academia de ajedrez formada por jugadores que le dedican gran parte de su vida a este juego. Esta pagina fue creada con el fín de usar los mejores metodos de enseñanza que hemos aprendido en nuestras etapas de estudio.Nuestra sede se encuentra en el corazón de Palermo, dónde organizamos los torneos y se dictan los cursos, aunque también existe la modalidad virtual para acceder a las clases. Esperamos que encuentras algo aquí que te sea interesante. Y más que nada esperamos que nuestro contenido te haga un fuerte jugador.</p>
+    <div
+      class="container-fluid bg-dark bg-gradient text-light text-center mt-3 rounded p-4"
+    >
+      <p>
+        <strong class="text-warning">¡Hola!</strong> Somos una academia de
+        ajedrez formada por jugadores que le dedican gran parte de su vida a
+        este juego. Esta pagina fue creada con el fín de usar los mejores
+        metodos de enseñanza que hemos aprendido en nuestras etapas de
+        estudio.Nuestra sede se encuentra en el corazón de Palermo, dónde
+        organizamos los torneos y se dictan los cursos, aunque también existe la
+        modalidad virtual para acceder a las clases. Esperamos que encuentras
+        algo aquí que te sea interesante. Y más que nada esperamos que nuestro
+        contenido te haga un fuerte jugador.
+      </p>
     </div>
-    <div class="container-fluid d-flex justify-content-center align-items-center p-4">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m
-        12!1m3!1d52551.63299514932!2d-58.447473960534474!3d-34.59209626168479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5eab6100911%3A0x71769e614c1dbeb0!2sClases%20de%20ajedrez%20internacional!5e0!3m2!1sen!2sar!4v1641986598518!5m2!1sen!2sar" style="border-radius: 12px;" allowfullscreen="" loading="lazy"></iframe>
+    <div
+      class="container-fluid d-flex justify-content-center align-items-center p-4"
+    >
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m
+        12!1m3!1d52551.63299514932!2d-58.447473960534474!3d-34.59209626168479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5eab6100911%3A0x71769e614c1dbeb0!2sClases%20de%20ajedrez%20internacional!5e0!3m2!1sen!2sar!4v1641986598518!5m2!1sen!2sar"
+        style="border-radius: 12px"
+        allowfullscreen=""
+        loading="lazy"
+      ></iframe>
     </div>
     <!-- footer -->
     <footer class="p-1 bg-dark bg-gradient footer_short">
-        <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
-            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_">
-                <img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook">
-            </a>
-            <a href="https://www.instagram.com" target="blank_">
-                <img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram">
-            </a>
-            <a href="https://www.twitter.com" target="blank_">
-                <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
-            </a>
-        </div>
-        <p class="text-center text-light">Sitio web creado por Agustín Taborda</p>
+      <div
+        class="d-flex flex-wrap justify-content-between align-items-center p-3"
+      >
+        <a href="index.html"><img src="img/mc_banner.png" alt="logomc" /></a>
+        <a href="https://www.facebook.com" target="blank_">
+          <img
+            src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor"
+            alt="facebook"
+          />
+        </a>
+        <a href="https://www.instagram.com" target="blank_">
+          <img
+            src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor"
+            alt="instagram"
+          />
+        </a>
+        <a href="https://www.twitter.com" target="blank_">
+          <img
+            src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor"
+            alt="twitter"
+          />
+        </a>
+      </div>
+      <p class="text-center text-light">Sitio web creado por Agustín Taborda</p>
     </footer>
     <!-- cdn bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
