--- a/torneos.html
+++ b/torneos.html
@@ -1,105 +1,151 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torneos</title>
-    <link rel="shortcut icon" href="/img/mclogo16x16.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="shortcut icon" href="/img/mclogo16x16.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg bg-dark bg-gradient navbar-dark">
-        <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="img/mclogo32x32.png" alt="masterchess logo"> Masterchess <span class="text-warning">Academy</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="torneos.html" class="nav-link">Torneos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="cursos.html" class="nav-link">Cursos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="conocenos.html" class="nav-link">Conocenos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contactanos.html" class="nav-link">Contactanos</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <a href="index.html" class="navbar-brand"
+          ><img src="img/mclogo32x32.png" alt="masterchess logo" /> Masterchess
+          <span class="text-warning">Academy</span></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a href="torneos.html" class="nav-link">Torneos</a>
+            </li>
+            <li class="nav-item">
+              <a href="cursos.html" class="nav-link">Cursos</a>
+            </li>
+            <li class="nav-item">
+              <a href="conocenos.html" class="nav-link">Conocenos</a>
+            </li>
+            <li class="nav-item">
+              <a href="contactanos.html" class="nav-link">Contactanos</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
     <!-- tittle banner-->
     <section class="bg-dark bg-gradient text-light text-center p-3">
-        <h1 class="tittle">Torneos</h1>
+      <h1 class="tittle">Torneos</h1>
     </section>
     <!-- torneos cards -->
     <section class="p-5">
-        <div class="row">
-            <div class="col-md p-2">
-                <div class="card text-center">
-                    <div class="card-header bg-warning bg-gradient text-dark p-3">
-                    15/03/2022
-                    </div>
-                    <div class="card-body bg-dark bg-gradient">
-                    <h3 class="card-title p-3 text-light">Torneo Blitz</h3>
-                    <p class="card-text p-3 text-light">Formato: 3+2. Valor de inscripción: $700.</p>
-                    <a href="contactanos.html" class="btn btn-warning bg-gradient anotate_btn">Anotate</a>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-md p-2">
+          <div class="card text-center">
+            <div class="card-header bg-warning bg-gradient text-dark p-3">
+              15/03/2022
             </div>
-            <div class="col-md p-2">
-                <div class="card text-center">
-                    <div class="card-header bg-dark bg-gradient text-light p-3">
-                    18/03/2022
-                    </div>
-                    <div class="card-body bg-warning bg-gradient">
-                    <h3 class="card-title p-3">Torneo Rapid</h3>
-                    <p class="card-text p-3">Formato: 10+0. Valor de inscripción: $500.</p>
-                    <a href="contactanos.html" class="btn btn-dark bg-gradient anotate_btn">Anotate</a>
-                    </div>
-                </div>
+            <div class="card-body bg-dark bg-gradient">
+              <h3 class="card-title p-3 text-light">Torneo Blitz</h3>
+              <p class="card-text p-3 text-light">
+                Formato: 3+2. Valor de inscripción: $700.
+              </p>
+              <a
+                href="contactanos.html"
+                class="btn btn-warning bg-gradient anotate_btn"
+                >Anotate</a
+              >
             </div>
-            <div class="col-md p-2">
-                <div class="card text-center">
-                    <div class="card-header bg-warning bg-gradient text-dark p-3">
-                    21/03/2022
-                    </div>
-                    <div class="card-body bg-dark bg-gradient">
-                    <h3 class="card-title p-3 text-light">Torneo Classic</h3>
-                    <p class="card-text p-3 text-light">Formato: 90+30. Valor de inscripción: $1000.</p>
-                    <a href="contactanos.html" class="btn btn-warning bg-gradient anotate_btn">Anotate</a>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="col-md p-2">
+          <div class="card text-center">
+            <div class="card-header bg-dark bg-gradient text-light p-3">
+              18/03/2022
+            </div>
+            <div class="card-body bg-warning bg-gradient">
+              <h3 class="card-title p-3">Torneo Rapid</h3>
+              <p class="card-text p-3">
+                Formato: 10+0. Valor de inscripción: $500.
+              </p>
+              <a
+                href="contactanos.html"
+                class="btn btn-dark bg-gradient anotate_btn"
+                >Anotate</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md p-2">
+          <div class="card text-center">
+            <div class="card-header bg-warning bg-gradient text-dark p-3">
+              21/03/2022
+            </div>
+            <div class="card-body bg-dark bg-gradient">
+              <h3 class="card-title p-3 text-light">Torneo Classic</h3>
+              <p class="card-text p-3 text-light">
+                Formato: 90+30. Valor de inscripción: $1000.
+              </p>
+              <a
+                href="contactanos.html"
+                class="btn btn-warning bg-gradient anotate_btn"
+                >Anotate</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- footer -->
     <footer class="p-1 bg-dark bg-gradient footer_short">
-        <div class="d-flex flex-wrap justify-content-between align-items-center p-3">
-            <a href="index.html"><img src="img/mc_banner.png" alt="logomc"></a>
-            <a href="https://www.facebook.com" target="blank_">
-                <img src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor" alt="facebook">
-            </a>
-            <a href="https://www.instagram.com" target="blank_">
-                <img src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor" alt="instagram">
-            </a>
-            <a href="https://www.twitter.com" target="blank_">
-                <img src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor" alt="twitter">
-            </a>
-        </div>
-        <p class="text-center text-light">Sitio web creado por Agustín Taborda</p>
+      <div
+        class="d-flex flex-wrap justify-content-between align-items-center p-3"
+      >
+        <a href="index.html"><img src="img/mc_banner.png" alt="logomc" /></a>
+        <a href="https://www.facebook.com" target="blank_">
+          <img
+            src="https://icongr.am/fontawesome/facebook-square.svg?size=30&color=currentColor"
+            alt="facebook"
+          />
+        </a>
+        <a href="https://www.instagram.com" target="blank_">
+          <img
+            src="https://icongr.am/fontawesome/instagram.svg?size=30&color=currentColor"
+            alt="instagram"
+          />
+        </a>
+        <a href="https://www.twitter.com" target="blank_">
+          <img
+            src="https://icongr.am/fontawesome/twitter-square.svg?size=30&color=currentColor"
+            alt="twitter"
+          />
+        </a>
+      </div>
+      <p class="text-center text-light">Sitio web creado por Agustín Taborda</p>
     </footer>
     <!-- cdn bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
